--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,6 @@ block content
   .container
       section
         .switch
-          input(type='checkbox')
+          input#button(type='checkbox')
           label
             i.icon-off
