--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/unlock.js')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
   body
