tela de usuários

--- a/views/user.jade
+++ b/views/user.jade
@@ -5,7 +5,7 @@ block content
       .container-fluid
         .navbar-header
           a.navbar-brand(href='#') WebSiteName
-        ul.nav.navbar-nav
+        ul.nav.navbar-nav.text-center
           li.active
             a(href='/') Início
           li
