tela de usuários

--- a/views/user.jade
+++ b/views/user.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-   nav.navbar.navbar-default
+   nav.navbar.navbar-inverse
       .container-fluid
         .navbar-header
           a.navbar-brand(href='#') WebSiteName
-        ul.nav.navbar-nav.text-center
+        ul.nav.navbar-nav
           li.active
             a(href='/') Início
           li
