--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,21 @@
 extends layout
 
 block content
-  .container
-      section
-        .switch
-          input#button(type='checkbox')
-          label
-            i.icon-off
+    nav.navbar.navbar-inverse
+      .container-fluid
+        .navbar-header
+          a.navbar-brand(href='#') WebSiteName
+        ul.nav.navbar-nav
+          li
+            a(href='/') Início
+          li.active
+            a(href='/cadastrar') Cadastrar
+          li
+            a(href='/alterar') Alterar
+          li
+            a(href='/buscar') Buscar
+    section
+      .switch
+        input#button(type='checkbox')
+        label
+          i.icon-off
