tela de usuários

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,11 +9,11 @@ block content
           li.active
             a(href='/') Início
           li
-            a(href='/cadastrar') Cadastrar
+            a(href='/user/cadastrar') Cadastrar
           li
-            a(href='/alterar') Alterar
+            a(href='/user/alterar') Alterar
           li
-            a(href='/buscar') Buscar
+            a(href='/user/buscar') Buscar
     section
       .switch
         input#button(type='checkbox')
