tela de usuários

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,11 +9,9 @@ block content
           li.active
             a(href='/') Início
           li
-            a(href='/user/cadastrar') Cadastrar
+            a(href='/user/cadastrar') Usuários
           li
-            a(href='/user/alterar') Alterar
-          li
-            a(href='/user/buscar') Buscar
+            a(href='/historic') Histórico
     section
       .switch
         input#button(type='checkbox')
