--- a/views/user.jade
+++ b/views/user.jade
@@ -9,8 +9,8 @@ block content
           li
             a(href='/') Início
           li.active
-            a(href='/cadastrar') Cadastrar
+            a(href='/user/cadastrar') Cadastrar
           li
-            a(href='/alterar') Alterar
+            a(href='/user/alterar') Alterar
           li
-            a(href='/buscar') Buscar
+            a(href='/user/buscar') Buscar
