--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
           li.active
             a(href='/') Início
           li
-            a(href='/user/cadastrar') Usuários
+            a(href='/user') Usuários
           li
             a(href='/historic') Histórico
     section
