--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,8 @@ block content
           li.active
             a(href='/') Início
           li.dropdown
-            a.dropdown-toggle(data-toggle='dropdown', href='#') Usuários span.caret
+            a.dropdown-toggle(data-toggle='dropdown', href='#') Usuários
+            span.caret
             ul.dropdown-menu
               li
                 a(href='/user/cadastrar') Cadastrar
