--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,9 @@ block content
           li.active
             a(href='/') Início
           li.dropdown
-            a.dropdown-toggle(data-toggle='dropdown', href='#') Usuários
-            span.caret
+            a.dropdown-toggle(data-toggle='dropdown', href='#')
+              | Page 1
+              span.caret
             ul.dropdown-menu
               li
                 a(href='/user/cadastrar') Cadastrar
