--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     script(src='/javascripts/jquery.js')
+    script(src='/javascripts/bootstrap/bootstrap.js')
     script(src='/javascripts/unlock.js')
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
