--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,9 @@ html
     title= title
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/bootstrap/bootstrap.js')
+    script(src='/javascripts/bootstrap/function/modal.js')
     script(src='/javascripts/script.js')
-    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
   body
