--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     script(src='/javascripts/bootstrap/bootstrap.js')
     script(src='/javascripts/bootstrap/function/modal.js')
     script(src='/javascripts/script.js')
-    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
   body
