--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,13 @@ doctype html
 html
   head
     title= title
-    script(src='/javascripts/jquery.js')
+    script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap/bootstrap.js')
-    script(src='/javascripts/bootstrap/functions/modal.js')
+    script(src='/javascripts/bootstrap/functions/transition.js')
+    script(src='/javascripts/bootstrap/functions/dropdown.js')
+    script(src='/javascripts/bootstrap/functions/collapse.js')
     script(src='/javascripts/script.js')
-    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
   body
