--- a/views/index.jade
+++ b/views/index.jade
@@ -9,8 +9,8 @@ block content
           li.active
             a(href='/') Início
           li.dropdown
-            a.dropdown-toggle(data-toggle='dropdown', href='#')
-              | Page 1
+            a.dropdown-toggle(data-toggle='dropdown')
+              | Usuário
               span.caret
             ul.dropdown-menu
               li
