--- a/views/insert.jade
+++ b/views/insert.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    nav.navbar.navbar-inverse
+    nav.navbar.navbar-default
       .container-fluid
         .navbar-header
           a.navbar-brand(href='#') WebSiteName
