--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
     nav.navbar.navbar-inverse
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='#') WebSiteName
+          a.navbar-brand(href='#') Campainha
         ul.nav.navbar-nav
           li.active
             a(href='/') Início
