--- a/views/user.jade
+++ b/views/user.jade
@@ -4,7 +4,7 @@ block content
    nav.navbar.navbar-inverse
       .container-fluid
         .navbar-header
-          a.navbar-brand(href='#') Campainha
+          a.navbar-brand() Campainha
         ul.nav.navbar-nav
           li
             a(href='/') Início
