Tela de cadastro

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     title= title
     script(src='/javascripts/jquery.min.js')
-    script(src='/javascripts/bootstrap/bootstrap.min.js')
+    script(src='/javascripts/bootstrap/bootstrap.js')
     script(src='/javascripts/bootstrap/functions/transition.js')
     script(src='/javascripts/bootstrap/functions/dropdown.js')
     script(src='/javascripts/bootstrap/functions/collapse.js')
