Tela de cadastro

--- a/views/insert.jade
+++ b/views/insert.jade
@@ -22,14 +22,15 @@ block content
           li
             a(href='/historic') Histórico
     section
-      .row
-        .(class='col-sm-1')
-        .(class='col-sm-6')
-          | agora vai.
-        .(class='col-sm-4')
-          .switch
-            input#button(type='checkbox')
-            label
-              i.icon-off
-        .(class='col-sm-1')
+      .container-fluid
+        .row
+          .(class='col-sm-1')
+          .(class='col-sm-6')
+            | agora vai.
+          .(class='col-sm-4')
+            .switch
+              input#button(type='checkbox')
+              label
+                i.icon-off
+          .(class='col-sm-1')
           
