Tela de cadastro

--- a/views/insert.jade
+++ b/views/insert.jade
@@ -23,11 +23,11 @@ block content
             a(href='/historic') Histórico
     section
       .container-fluid
-        .row
-          .(class='col-sm-1')
-          .(class='col-sm-6')
+        div.row
+          div.(class='col-sm-1')
+          div.(class='col-sm-6')
             | agora vai.
-          .(class='col-sm-4')
+          div.(class='col-sm-4')
             .switch
               input#button(type='checkbox')
               label
