Tela de cadastro

--- a/views/insert.jade
+++ b/views/insert.jade
@@ -24,13 +24,11 @@ block content
     section
       .container-fluid
         div.row
-          div.(class='col-sm-1')
-          div.(class='col-sm-6')
-            | agora vai.
-          div.(class='col-sm-4')
+          div.(class='col-md-4')
+            h3 teste
+          div.(class='col-md-4')
             .switch
               input#button(type='checkbox')
               label
                 i.icon-off
-          .(class='col-sm-1')
           
