--- a/views/insert.jade
+++ b/views/insert.jade
@@ -24,7 +24,7 @@ block content
     section
       .container-fluid
         div.row
-          div.(class='col-md-12')
+          .col-md-12
             h3 teste
       .switch
         input#button(type='checkbox')
