Tela de cadastro

--- a/views/insert.jade
+++ b/views/insert.jade
@@ -23,10 +23,15 @@ block content
             a(href='/historic') Histórico
     section
       .container-fluid
-        div.row
-          .col-md-12
+        .row
+          .col-sm-1
+          .col-sm-6
             h3 teste
-      .switch
-        input#button(type='checkbox')
-        label
-          i.icon-off
+          .col-sm-4
+            .switch
+              input#button(type='checkbox')
+              label
+                i.icon-off
+          .col-sm-1
+            
+      
