--- a/views/insert.jade
+++ b/views/insert.jade
@@ -26,7 +26,11 @@ block content
         .row
           .col-sm-1
           .col-sm-6
-            h3 teste
+            .panel.panel-default
+              .panel-body
+                .form-group
+                  label(for='usr') Name:
+                  input#usr.form-control(type='text')
           .col-sm-4
             .switch
               input#button(type='checkbox')
