--- a/views/insert.jade
+++ b/views/insert.jade
@@ -6,9 +6,9 @@ block content
         .navbar-header
           a.navbar-brand(href='#') Campainha
         ul.nav.navbar-nav
-          li.active
+          li
             a(href='/') Início
-          li.dropdown
+          li.dropdown.active
             a.dropdown-toggle(data-toggle='dropdown')
               | Usuário
               span.caret
@@ -27,10 +27,13 @@ block content
           .col-sm-1
           .col-sm-6
             .panel.panel-default
+              .panel-heading
+                h3 Cadastrar usuário
               .panel-body
                 .form-group
                   label(for='usr') Name:
                   input#usr.form-control(type='text')
+              .panel-footer
           .col-sm-4
             .switch
               input#button(type='checkbox')
