--- a/views/insert.jade
+++ b/views/insert.jade
@@ -31,8 +31,12 @@ block content
                 h3 Cadastrar usuário
               .panel-body
                 .form-group
-                  label(for='usr') Name:
-                  input#usr.form-control(type='text')
+                  label(for='name') Name:
+                  input#name.form-control(type='text')
+                  label(for='pass') Senha:
+                  input#pass.form-control(type='pass')
+                  label(for='nfc') NFC:
+                  input#nfc.form-control(type='text')
               .panel-footer
           .col-sm-4
             .switch
