Tela de cadastro

--- a/views/insert.jade
+++ b/views/insert.jade
@@ -39,10 +39,12 @@ block content
                   input#nfc.form-control(type='text')
               .panel-footer
           .col-sm-4
-            .switch
-              input#button(type='checkbox')
-              label
-                i.icon-off
+            .panel.panel-default
+              .panel-body
+                .switch
+                  input#button(type='checkbox')
+                  label
+                    i.icon-off
           .col-sm-1
             
       
