--- a/views/historic.jade
+++ b/views/historic.jade
@@ -1,23 +1,28 @@
 extends layout
 
 block content
-	nav.navbar.navbar-inverse
-    .container-fluid
-      .navbar-header
-        a.navbar-brand(href='#') Campainha
-      ul.nav.navbar-nav
-        li
-          a(href='/') Início
-        li.dropdown
-          a.dropdown-toggle(data-toggle='dropdown')
-            | Usuário
-            span.caret
-          ul.dropdown-menu
-            li
-              a(href='/user/cadastrar') Cadastrar
-            li
-              a(href='/user/alterar') Alterar
-            li
-              a(href='/user/search') Buscar
-        li.active
-          a(href='/historic') Histórico
+    nav.navbar.navbar-inverse
+      .container-fluid
+        .navbar-header
+          a.navbar-brand(href='#') Campainha
+        ul.nav.navbar-nav
+          li.active
+            a(href='/') Início
+          li.dropdown
+            a.dropdown-toggle(data-toggle='dropdown')
+              | Usuário
+              span.caret
+            ul.dropdown-menu
+              li
+                a(href='/user/cadastrar') Cadastrar
+              li
+                a(href='/user/alterar') Alterar
+              li
+                a(href='/user/search') Buscar
+          li
+            a(href='/historic') Histórico
+    section
+      .switch
+        input#button(type='checkbox')
+        label
+          i.icon-off
