--- a/views/historic.jade
+++ b/views/historic.jade
@@ -30,15 +30,21 @@ block content
               .panel-heading
                 h3 Histórico de acesso
               .panel-body
-                .form-group
-                  label(for='name') Name:
-                  input#name.form-control(type='text')
-                  br
-                  label(for='pass') Senha:
-                  input#pass.form-control(type='pass')
-                  br
-                  label(for='nfc') NFC:
-                  input#nfc.form-control(type='text')
+                table.table.table-striped.table-bordered.table-hover.table-condensed
+						      thead
+						        tr
+						          th #
+						          th Firstname
+						      tbody
+						        tr
+						          td 1
+						          td Anna
+						        tr
+						          td 2
+						          td Debbie
+						        tr
+						          td 3
+						          td John
               .panel-footer
           .col-sm-4
             .switch
