Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -32,17 +32,8 @@ block content
               .panel-body
                 table.table.table-striped.table-bordered.table-hover.table-condensed
 					        tr
-					          th #
-					          th Firstname
-					        tr
-					          td 1
-					          td Anna
-					        tr
-					          td 2
-					          td Debbie
-					        tr
-					          td 3
-					          td John
+					          td #
+					          td Firstname
               .panel-footer
           .col-sm-4
             .switch
