Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -30,7 +30,11 @@ block content
               .panel-heading
                 h3 Histórico de acesso
               .panel-body
-                
+                table
+                  tr
+                    td 1
+                    td 2
+                    td 3
               .panel-footer
           .col-sm-4
             .switch
