Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -31,10 +31,16 @@ block content
                 h3 Histórico de acesso
               .panel-body
                 table
-                  tr
-                    td 1
-                    td 2
-                    td 3
+	                thead  
+	                  tr
+	                    td 1
+	                    td 2
+	                    td 3
+	                tbody
+	                  tr
+	                    td A
+	                    td B
+	                    td C
               .panel-footer
           .col-sm-4
             .switch
