Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -30,7 +30,7 @@ block content
               .panel-heading
                 h3 Histórico de acesso
               .panel-body
-                table
+                table.table.table-striped.table-bordered.table-hover.table-condensed
                   thead  
                     tr
                       td 1
