Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -33,14 +33,14 @@ block content
                 table.table.table-striped.table-bordered.table-hover.table-condensed
                   thead  
                     tr
-                      td 1
-                      td 2
-                      td 3
+                      td Data e hora
+                      td Dispositivo
+                      td Usuário
                   tbody
                     tr
-                      td A
-                      td B
-                      td C
+                      td 15/07/2016
+                      td 15:14:44
+                      td Botão de saída
               .panel-footer
           .col-sm-4
             .switch
