Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -38,9 +38,9 @@ block content
                       td Usuário
                   tbody
                     tr
-                      td 15/07/2016
-                      td 15:14:44
+                      td 15/07/2016 15:14:44
                       td Botão de saída
+                      td Fulano
               .panel-footer
           .col-sm-4
             .switch
