--- a/views/historic.jade
+++ b/views/historic.jade
@@ -33,14 +33,18 @@ block content
                 table.table.table-striped.table-bordered.table-hover.table-condensed
                   thead  
                     tr
-                      td Data e hora
-                      td Dispositivo
-                      td Usuário
+                      th Data e hora
+                      th Dispositivo
+                      th Usuário
                   tbody
                     tr
                       td 15/07/2016 15:14:44
                       td Botão de saída
                       td Fulano
+                    tr
+                      td 15/07/2016 15:14:50
+                      td Web
+                      td Fulana
               .panel-footer
           .col-sm-4
             .switch
