Tela de histórico

--- a/views/historic.jade
+++ b/views/historic.jade
@@ -33,12 +33,14 @@ block content
                 table.table.table-striped.table-bordered.table-hover.table-condensed
                   thead  
                     tr
-                      th Data e hora
+                      th Data
+                      th Hora
                       th Dispositivo
                       th Usuário
                   tbody
                     tr
-                      td 15/07/2016 15:14:44
+                      td 15/07/2016
+                      td 15:14:44
                       td Botão de saída
                       td Fulano
                     tr
