--- a/views/insert.jade
+++ b/views/insert.jade
@@ -40,6 +40,8 @@ block content
                   label(for='nfc') NFC:
                   input#nfc.form-control(type='text')
               .panel-footer
+                button.success Cadastrar
+                button.danger Cancelar
           .col-sm-4
             .switch
               input#button(type='checkbox')
