--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 extends layout
-
+/*
 block content
     nav.navbar.navbar-inverse
       .container-fluid
@@ -20,7 +20,7 @@ block content
               li
                 a(href='/user/search') Buscar
           li
-            a(href='/historic') Histórico
+            a(href='/historic') Histórico*/
     section
       .switch
         input#button(type='checkbox')
