--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(name='viewport', content='width=device-width, intitial-scale=1')
     title= title
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap/transition.js')
