--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 	<head>
 	    <meta charset="UTF-8">
-	    <script src="https://apis.google.com/js/platform.js" async defer></script>
 	    <meta name="google-signin-client_id" content="489399558653-q1ellftt56a8q6if3ehmisnk4ksa85eo.apps.googleusercontent.com">
 	    <script src="https://apis.google.com/js/platform.js" async defer></script>
 	</head>   
 	<body>
-	    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+	    <div class="g-signin2" data-onsuccess="onSignIn"></div> 
 	</body>
 </html>
