--- a/views/login.html
+++ b/views/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<head>
 	    <meta charset="UTF-8">
@@ -8,4 +8,4 @@
 	<body>
 	    <div class="g-signin2" data-onsuccess="onSignIn"></div> 
 	</body>
-</html>
+</html>-->
