botão de login pelo google web

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     meta(name='viewport', content='width=device-width, intitial-scale=1')
-    <meta name="google-signin-client_id" content="489399558653-q1ellftt56a8q6if3ehmisnk4ksa85eo.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    meta(name='google-signin-client_id', content='489399558653-q1ellftt56a8q6if3ehmisnk4ksa85eo.apps.googleusercontent.com')
+    script(src='https://apis.google.com/js/platform.js', async='', defer='')
     title= title
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap/transition.js')
