conseguindo dados da conta

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
     script(src='/javascripts/bootstrap/dropdown.js')
     script(src='/javascripts/bootstrap/collapse.js')
     script(src='/javascripts/script.js')
-    script(src='/authentication/web.js')
+    script(src='./../routes/authentication/web.js')
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/font-awesome.css')
