conseguindo dados da conta

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-	.g-signin2(data-onsuccess='onSignIn')
+button#login(data-onsuccess='logarGoogle') Entrar com e-mail google
