conseguindo dados da conta

--- a/views/login.jade
+++ b/views/login.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
 button#login(data-onsuccess='logarGoogle') Entrar com e-mail google
-button dsadsa
+button.btn.btn-danger Cancelar
