conseguindo dados da conta

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-	button#login(data-onsuccess='logarGoogle') Entrar com e-mail google
+	button#login Entrar com e-mail google
