redirecionamento da pagina via servidor

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,5 @@
 extends layout
 
 block content
-	button#login Entrar com e-mail google
+	form(action='/Login', method='GET')
+		button#login Entrar com e-mail google
