--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-	form(action='/Login', method='GET')
+	form(action='/Login/Login', method='GET')
 		button#login Entrar com e-mail google
