--- a/views/login.jade
+++ b/views/login.jade
@@ -3,3 +3,4 @@ extends layout
 block content
 	form(action='/Login/Google', method='GET')
 		button#login Entrar com e-mail google
+	button#signOut Deslogar
