--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,5 @@ block content
 	
 	button#signOut Deslogar
 	p#usuarioInvalido
+	
+    script(src='https://apis.google.com/js/platform.js', async='', defer='')
