--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, intitial-scale=1')
     title= title
+    script(src='https://apis.google.com/js/platform.js', async='', defer='')
     meta(name='google-signin-client_id', content='489399558653-enu1g23uf2gt1algid9pvfhn8n57tmqt.apps.googleusercontent.com')
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap/transition.js')
