--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,6 @@ block content
 		input#button(type='checkbox')
 		label
 			i.icon-off
-	
+	form(action='/Login', method='GET')
 	button#signOut Deslogar
 	p#usuarioInvalido
