--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,4 @@ block content
 		label
 			i.icon-off
 	form(action='/Login', method='GET')
-		button#signOut Deslogar
-	p#usuarioInvalido
+		button#signOut Sair
