--- a/views/invalido.jade
+++ b/views/invalido.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-	form(action='/Login/Google', method='GET')
-		button#login Entrar com e-mail google
-	h4 Usuário não registrado.
+	.centralizar
+		form(action='/Login/Google', method='GET')
+			button#login Entrar com e-mail google
+		h4 Usuário não registrado.
