--- a/views/deslogado.jade
+++ b/views/deslogado.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-	form(action='/Login/Google', method='GET')
-		button#login Entrar com e-mail google
-	h4 É necessário estar logado para acessar a página desejada.
+	.centralizar
+		form(action='/Login/Google', method='GET')
+			button#login Entrar com e-mail google
+		h4 É necessário estar logado para acessar a página desejada.
