--- a/views/index.jade
+++ b/views/index.jade
@@ -5,5 +5,6 @@ block content
 		input#button(type='checkbox')
 		label
 			i.icon-off
-	form(action='/Login', method='GET')
-		button#signOut Sair
+	.centralizar
+		form(action='/Login', method='GET')
+			button#signOut Sair
