--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -176,6 +176,8 @@ header > img{
 }
 
 .centralizar{
-  width: 120px;
-  margin: auto;
+  margin: 50px auto;
+  position: relative;
+  width: 150px;
+  height: 50px;
 }
