--- a/views/deslogado.jade
+++ b/views/deslogado.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-	.centralizar
+	.centralizarBtn
 		form(action='/Login/Google', method='GET')
 			button#login Entrar com e-mail google
+	.centralizarMensagem
 		h4 É necessário estar logado para acessar a página desejada.
