--- a/views/login.jade
+++ b/views/login.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-	.centralizar
+	.centralizarBtn
 		form(action='/Login/Google', method='GET')
 			button#login Entrar com e-mail google
