--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -175,9 +175,16 @@ header > img{
   color: red; 
 }
 
-.centralizar{
+.centralizarBtn{
   margin: 50px auto;
   position: relative;
-  width: 30%;
+  width: 15%;
+  height: 50px;
+}
+
+.centralizarMensagem{
+  margin: 10px auto;
+  position: relative;
+  width: 35%;
   height: 50px;
 }
