--- a/views/invalido.jade
+++ b/views/invalido.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	.centralizar
+	.centralizarBtn
 		form(action='/Login/Google', method='GET')
 			button#login Entrar com e-mail google
 		h4 Usuário não registrado.
