--- a/views/invalido.jade
+++ b/views/invalido.jade
@@ -4,4 +4,5 @@ block content
 	.centralizarBtn
 		form(action='/Login/Google', method='GET')
 			button#login Entrar com e-mail google
+	.centralizarMensagem
 		h4 Usuário não registrado.
