--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,6 @@ block content
 		input#button(type='checkbox')
 		label
 			i.icon-off
-	.centralizar
+	.centralizarBtn
 		form(action='/Login', method='GET')
 			button#signOut Sair
