--- a/views/deslogado.jade
+++ b/views/deslogado.jade
@@ -4,5 +4,5 @@ block content
 	.centralizarBtn
 		form(action='/Login/Google', method='GET')
 			button#login Entrar com e-mail google
-	.centralizarMensagem
+	.centralizarDeslogado
 		h4 É necessário estar logado para acessar a página desejada.
