--- a/views/index.jade
+++ b/views/index.jade
@@ -7,4 +7,5 @@ block content
 			i.icon-off
 	.centralizarBtn
 		form(action='/Login', method='GET')
-			button#signOut Sair
+	.centralizarSair
+		button#signOut Sair
