--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,9 +182,23 @@ header > img{
   height: 50px;
 }
 
-.centralizarMensagem{
+.centralizarDeslogado{
   margin: 10px auto;
   position: relative;
   width: 40%;
+  height: 50px;
+}
+
+.centralizarSair{
+  margin: 10px auto;
+  position: relative;
+  width: 30px;
+  height: 50px;
+}
+
+.centralizarErro{
+  margin: 10px auto;
+  position: relative;
+  width: 15%;
   height: 50px;
 }
